--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style="width: fit-content;"id="root"></div>
+    <div style="width:auto;" id="root"></div>
   </body>
 </html>
